apps/public/jellyfin/jellyfin-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 28096
