apps/public/jellyfin/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.abbottland.io
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              number: 28096
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jellyfin.abbottland.io
    secretName: jellyfin-tls
